--- a/wp-content/themes/snf/styles/css/contact.css
+++ b/wp-content/themes/snf/styles/css/contact.css
@@ -57,3 +57,10 @@ IX.) News
 	/* background: rgb(107,105,135); */
 	z-index: 2;
 	color: rgb(107,105,135);text-transform: uppercase;}
+
+.dropdown-divider {
+	height: 0;
+	margin: 0.5rem 0;
+	overflow: hidden;
+	border-top: 1px solid #e9ecef;
+}
