--- a/wp-content/themes/snf/styles/css/archives-page-style.css
+++ b/wp-content/themes/snf/styles/css/archives-page-style.css
@@ -68,3 +68,26 @@
     font-weight:700;
     border-bottom:solid 1px #cecece;
 }
+
+.sidebar-archive-contact{
+	height:250px;
+	background-size:cover;
+	background-position: center;
+	position:relative;
+display: flex;justify-content: center;align-items: center;border-radius: 4px;}
+.sidebar-archive-contact .sidebar-overlay{
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;bottom:0;
+	opacity: .65;height:100%;
+}
+.sidebar-archive-contact .markets-contact-content{
+	position:relative;
+	color:#fff;
+	text-align:center;
+	width:100%;
+}
+.sidebar-archive-contact .markets-contact-content h3{
+	font-weight:300;
+}}
