--- a/wp-content/themes/snf/styles/css/cpt/investors.css
+++ b/wp-content/themes/snf/styles/css/cpt/investors.css
@@ -229,8 +229,8 @@ a#login-tab {}
         border: none !important;
     }
     .investor-gradient .date{
-        text-transform: uppercase;\
-    z-index: 1;
+        text-transform: uppercase;
+        z-index: 1;
         position: relative;
         left: -10px;
         padding: .75rem 1.25rem;
@@ -977,7 +977,6 @@ js-(before|after)
         flex: none !important;
     }
 }
-
 .inv-title-seperation {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -1089,3 +1088,133 @@ js-(before|after)
     filter: alpha(opacity=1);
     opacity: 1;
     display: flex;justify-content: center;align-items: center;}
+/*===================================================
+
+======================================================*/
+.investor_core_values .modal.left .modal-dialog {
+    position:fixed;
+    left: 0;
+    margin: auto;
+    width: 35vw;
+    height: 100%;
+    -webkit-transform: translate3d(0%, 0, 0);
+    -ms-transform: translate3d(0%, 0, 0);
+    -o-transform: translate3d(0%, 0, 0);
+    transform: translate3d(0%, 0, 0);
+}
+.investor_core_values .modal.right .modal-dialog {
+    position:fixed;
+    right: 0;
+    margin: auto;
+    width: 35vw;
+    height: 100%;
+    -webkit-transform: translate3d(0%, 0, 0);
+    -ms-transform: translate3d(0%, 0, 0);
+    -o-transform: translate3d(0%, 0, 0);
+    transform: translate3d(0%, 0, 0);
+}
+.investor_core_values .modal.left .modal-content, .investor_core_values .modal.right .modal-content{
+    height: 100%;
+    overflow-y: auto;
+}
+.investor_core_values .modal.right .modal-body, .investor_core_values .modal.left .modal-body{
+    padding: 15px 15px 80px;
+}
+.investor_core_values .modal.left.fade .modal-dialog {
+    left: -35vw;
+    -webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
+    -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
+    -o-transition: opacity 0.3s linear, left 0.3s ease-out;
+    transition: opacity 0.3s linear, left 0.3s ease-out;
+}
+.investor_core_values .modal.right.fade .modal-dialog {
+    right: -35vw;
+    -webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
+    -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
+    -o-transition: opacity 0.3s linear, left 0.3s ease-out;
+    transition: opacity 0.3s linear, left 0.3s ease-out;
+}
+.investor_core_values .modal.right.fade.show .modal-dialog {
+    right: 0;
+}
+.investor_core_values .modal.left.fade.show .modal-dialog {
+    left: 0;
+}
+/* ----- MODAL STYLE ----- */
+.investor_core_values .modal-content {
+    border-radius: 0;
+    border: none;
+}
+.investor_core_values .modal-header {
+    border-bottom-color: #eeeeee;
+    background-color: #fafafa;
+}
+/* ----- v CAN BE DELETED v ----- */
+.btn-outline-light:focus {
+    outline: 0;
+}
+/*===================================================
+
+======================================================*/
+.investor_icon {
+    text-align: center;
+    position: relative;
+}
+.investor_icon > .investor_image {
+    position: relative;
+    z-index: 2;
+    margin: auto;
+    width: 88px;
+    height: 88px;
+    border: 8px solid white;
+    line-height: 88px;
+    border-radius: 50%;
+    background: #002d73;
+    vertical-align: middle;
+}
+.investor_icon:hover > .investor_image {
+    background: #333;
+}
+.investor_icon > .investor_image > i {
+    font-size: 36px !important;
+    color: #fff !important;
+    line-height: 1;
+    display: inline-block;
+}
+.investor_icon:hover > .investor_image > i {
+    color: white !important;
+}
+.investor_icon > .investor_info {
+    margin-top: -24px;
+    background: rgba(0, 0, 0, 0.04);
+    border: 1px solid #e0e0e0;
+    padding: 15px 0 10px 0;
+}
+.investor_icon:hover > .investor_info {
+    background: rgba(0, 0, 0, 0.04);
+    border-color: #e0e0e0;
+    color: white;
+}
+.investor_icon > .investor_info > h3.investor_title {
+    /* font-family: "Roboto", sans-serif !important; */
+    font-size: 16px;
+    color: #222;
+    font-weight: 500;
+    margin-bottom: 10px;margin-top: 20px;}
+
+.investor_icon > .investor_info > p {
+    font-family: "Roboto", sans-serif !important;
+    font-size: 13px;
+    color: #666;
+    line-height: 1.5em;
+    margin: 20px;
+}
+.investor_icon:hover > .investor_info > h3.investor_title,
+.investor_icon:hover > .investor_info > p,
+.investor_icon:hover > .investor_info > .more > a {
+    color: #222;
+}
+
+
+
+
