--- a/wp-content/themes/snf/styles/css/global.css
+++ b/wp-content/themes/snf/styles/css/global.css
@@ -2,18 +2,11 @@
 /*===================================================
     Global Body Style Rules
 ======================================================*/
-body{
-    /* overflow-x:hidden !important; */
-    margin-top: 15px !important;
-}
+
 .grecaptcha-badge{
     display:none !important;
 }
-#content p{
-    font-size: 1.0rem;
-    font-family: 'Source Sans Pro',  sans-serif;
-    text-align: justify;
-}
+
 /*===================================================
     Headers
 ======================================================*/
@@ -134,6 +127,15 @@ Common Classes
 
 ======================================================*/
 @media(min-width:992px){
+    body{
+        /* overflow-x:hidden !important; */
+        margin-top: 15px !important;
+    }
+    #content p{
+        font-size: 1.0rem;
+        font-family: 'Source Sans Pro',  sans-serif;
+        text-align: justify;
+    }
     .site-content img.centered,
     .site-content img.alignleft,
     .site-content .wp-caption.alignleft {
@@ -234,6 +236,15 @@ Common Classes
     }
 }
 @media(max-width:991px){
+    body{
+        /* overflow-x:hidden !important; */
+        /* margin-top: 15px !important; */
+    }
+    #content p{
+        font-size: .9rem;
+        font-family: 'Source Sans Pro',  sans-serif;
+        text-align: justify;
+    }
     .site-content img.centered,
     .site-content .aligncenter {
         display: block;
@@ -409,9 +420,7 @@ Common Classes
 /*===================================================
     Inner Specific
 ======================================================*/
-
 .site-content .contact-bar .contact_bg_bar {
-
     position: relative;
     display:flex;
     justify-content:center;
@@ -445,7 +454,7 @@ Common Classes
 .contact_bg_bar{
     background-position:center;
     background-size:cover;
-    height:25vh;
+
     background-attachment: fixed;
     /* display: flex; */width: 100%;/* height: 100%; */}
 .site-content .contact-bar .section-header {
@@ -455,22 +464,26 @@ Common Classes
     z-index: 99;
     position: relative;
     /* height: 100%; */align-items: center;/* width: 100%; */}
+.site-content .contact_bg_bar .section-header a.btn:hover{
+    background-color:transparent !important;
+}
 .site-content .contact-bar .section-header h2{
     z-index: 9;
     text-transform: uppercase;
     font-weight: 300;
     font-size: 3.1rem;
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);}
+    padding: 1rem;text-shadow: 2px 4px 3px rgba(0,0,0,0.3);}
 .site-content .site-cta-container{
 }
 .flexible-layout .section-header a.btn-outline-light:hover{
-
-    background-color: transparent;}
+    background-color: transparent;
+}
 
 /*===================================================
     Flexible Content
 ======================================================*/
-.flexible-card{
+.flexible-card div.col{
+    margin:10px 0
 }
 .flexible-card .card-img-top {width: 100%;padding: 2rem;}
 .flexible-card .traditional-card{
