--- a/wp-content/themes/snf/styles/css/markets/markets-default.css
+++ b/wp-content/themes/snf/styles/css/markets/markets-default.css
@@ -163,7 +163,7 @@ IX.)
     background-position:center;
     height: 135px;
     position:relative;
-    z-index:-1;
+    /* z-index:-1; */
     display: flex;border-radius: 4px;justify-content: center;align-items: center;}
 .sidebar-market-contact .sidebar-overlay{
     position: absolute;
@@ -316,7 +316,7 @@ Cards
 }
 
 .carousel-inner .carousel-item {
-    margin-right: inherit;
+    /* margin-right: inherit; */
     /* padding: 0; */}
 #markets_carousel .card-body h2{
     font-size:1.15rem;
@@ -369,6 +369,139 @@ Cards
     #markets_carousel .card-img-top {
         height: 20vw;
     }
+    .flexible-card .traditional-card{
+        background-size: cover;
+        background-position: center;
+        height: 185px;
+    }
+    .flexible-card .card-tag{
+    }
+    .second-tier-nav .market_nav_elements ul li{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;line-height: 1.5;}
+    .second-tier-nav .market_nav_elements ul li ul.dropdown-menu li a{
+        color:#002d73;
+        font-weight:400;
+    }
+    .second-tier-nav .market_nav_elements ul li ul.dropdown-menu li{
+        display:block;
+        padding: 7px .5rem;}
+    .second-tier-nav .market_nav_elements{
+        /* display:inline-flex; */
+        /* position:relative; */
+        /* width:100%; */
+        /* height: 100%; */}
+    .second-tier-nav ul li{
+        display: inline-block;
+        /* font-size: 22px; */
+
+        /* margin: 0; */
+        /* text-transform: uppercase; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* background: transparent; */
+        position: relative;
+        /* width: auto; */
+        line-height: 1.2;
+    }
+    .second-tier-nav ul li ul li{
+        display:block;
+        padding: 7px .5rem;
+    }
+    .shrink.second-tier-nav ul li{
+        border: none;
+        font-size: 28px;
+        padding: .75rem 1.25rem;
+        margin: 0;
+        text-transform: uppercase;
+        /* justify-content: center; */
+        /* align-items: center; */
+        background: transparent;
+        position: relative;
+        display: flex;
+        line-height: 1.2;
+    }
+    .shrink.second-tier-nav ul li:hover ul.children li{
+        display:block;
+        padding: .75rem .95rem;
+    }
+
+    .shrink.second-tier-nav ul li:hover ul.children{
+        display:block !important;
+        position:absolute;
+        top: 96%;
+        box-shadow: 0px 0px 11px -9px rgb(0 0 0 / 75%);
+        border-radius: 0;
+        min-width: 230px;
+    }
+    .second-tier-nav ul li.active{
+        /* position: relative; */
+        /* padding: 0; */
+
+
+        /* border-radius: 0 !important; */
+    }
+    .shrink.second-tier-nav ul li.active{
+        position: relative;
+        /* padding: .75rem 0rem; */
+        background: transparent;
+        padding-right: 0%;
+        border-radius: 0 !important;
+    }
+    .shrink.second-tier-nav ul li.active:before{
+        position:absolute;
+        padding: .15rem .45rem;
+        top: 0;
+        height: 100%;
+        content:"";
+        clip-path: polygon(0 0, 82% 0, 97% 100%, 0% 100%);
+        width: 8vw;
+        background: rgb(249,176,0);
+    }
+    .second-tier-nav ul li.active:before{
+        position:absolute;
+        left: 0%;
+        top: 0;
+        height: 100%;
+        /* content:""; */
+        /* clip-path: polygon(0 0, 79% 0, 87% 100%, 0% 100%); */
+        /* width: 7vw; */
+        /* background: rgb(249,176,0); */
+        /* margin-right: 5%; */
+    }
+    .second-tier-nav ul li:hover ul.children{
+        display: block;
+        position:absolute;
+        top: 100%;
+        left:0;
+        min-width:220px;
+        background-color: #fff;
+        width: 100%;padding: 0 .85rem;z-index: 5;
+        box-shadow: 0px 1px 2px #999;
+    }
+    .second-tier-nav ul li ul.children{
+        display: none;
+    }
+    #children-listing-sidebar{
+        position:relative;
+        z-index: 5;
+        /* overflow-x:hidden; */
+    }
+    .bg_image_card{
+        background-size:cover;
+        background-position: center;
+        height: 200px;
+    }
+    #markets_carousel .card-body h4{
+        font-weight:300;
+        color:#002d73;
+    }
+    #markets_carousel{
+        position:relative;
+        width:100%;
+        padding: 0;min-height: 80vh;}
 }
 
 @media (min-width: 1200px) {
@@ -429,119 +562,3 @@ section.contact-bar  {
 /*===================================================
    Horizontal Card Layout
 ======================================================*/
-.flexible-card .traditional-card{
-    background-size: cover;
-    background-position: center;
-    height: 185px;
-}
-.flexible-card .card-tag{
-}
-.second-tier-nav ul li{
-    display: inline-block;
-    /* font-size: 22px; */
-
-    /* margin: 0; */
-    /* text-transform: uppercase; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* background: transparent; */
-    position: relative;
-    /* width: auto; */
-    line-height: 1.2;
-}
-.second-tier-nav ul li ul li{
-    display:block;
-    padding: 7px .5rem;
-}
-.shrink.second-tier-nav ul li{
-    border: none;
-    font-size: 28px;
-    padding: .75rem 1.25rem;
-    margin: 0;
-    text-transform: uppercase;
-    /* justify-content: center; */
-    /* align-items: center; */
-    background: transparent;
-    position: relative;
-    display: flex;
-    line-height: 1.2;
-}
-.shrink.second-tier-nav ul li:hover ul.children li{
-    display:block;
-    padding: .75rem .95rem;
-}
-
-.shrink.second-tier-nav ul li:hover ul.children{
-    display:block !important;
-    position:absolute;
-    top: 96%;
-    box-shadow: 0px 0px 11px -9px rgb(0 0 0 / 75%);
-    border-radius: 0;
-    min-width: 230px;
-}
-.second-tier-nav ul li.active{
-    position: relative;
-    padding: .75rem;
-    /* background-color: black; */
-    /* padding-right: 5%; */
-    /* border-radius: 0 !important; */
-}
-.shrink.second-tier-nav ul li.active{
-    position: relative;
-    /* padding: .75rem 0rem; */
-    background: transparent;
-    padding-right: 0%;
-    border-radius: 0 !important;
-}
-.shrink.second-tier-nav ul li.active:before{
-    position:absolute;
-    padding: .15rem .45rem;
-    top: 0;
-    height: 100%;
-    content:"";
-    clip-path: polygon(0 0, 82% 0, 97% 100%, 0% 100%);
-    width: 8vw;
-    background: rgb(249,176,0);
-}
-.second-tier-nav ul li.active:before{
-    position:absolute;
-    left: 0%;
-    top: 0;
-    height: 100%;
-    /* content:""; */
-    /* clip-path: polygon(0 0, 79% 0, 87% 100%, 0% 100%); */
-    /* width: 7vw; */
-    /* background: rgb(249,176,0); */
-    /* margin-right: 5%; */
-}
-.second-tier-nav ul li:hover ul.children{
-    display: block;
-    position:absolute;
-    top: 100%;
-    left:0;
-    min-width:220px;
-    background-color: #fff;
-    width: 100%;padding: 0 .85rem;z-index: 5;
-    box-shadow: 0px 1px 2px #999;
-}
-.second-tier-nav ul li ul.children{
-    display: none;
-}
-#children-listing-sidebar{
-    position:relative;
-    z-index: 5;
-    /* overflow-x:hidden; */
-}
-.bg_image_card{
-    background-size:cover;
-    background-position: center;
-    height: 200px;
-}
-#markets_carousel .card-body h4{
-    font-weight:300;
-    color:#002d73;
-}
-#markets_carousel{
-    position:relative;
-    width:100%;
-    padding: 0;}
