--- a/wp-content/themes/snf/styles/css/markets/oil-gas.css
+++ b/wp-content/themes/snf/styles/css/markets/oil-gas.css
@@ -17,7 +17,6 @@ IX.)
 
 
 ======================================================*/
-
 .carousel-control-prev, .carousel-control-next{
     /* position: relative; */
     /* padding: 0 15px; */
@@ -67,11 +66,11 @@ IX.)
     letter-spacing: 1px;
 }
 .subsidiary-children-pages ul li a {
-    font-size: 14px;
+    /* font-size: 14px; */
     /* letter-spacing: 2px; */
-    font-weight: 400;
-    z-index: 4;
-    text-align: center;
+    /* font-weight: 300; */
+    /* z-index: 4; */
+    /* text-align: center; */
 }
 .subsidiary-children-pages ul li span:before{
     content:"\F229";
@@ -81,8 +80,6 @@ IX.)
     top:0;
     font-family: bootstrap-icons !important;
 }
-
-
 .second-tier-nav ul li.active{
 }
 
